started a journal, did some other small things.

--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 The purpose of this repository is to store random scripts/pages/documents that I make during personal projects or during
-pre-course work for code bootcamps
+pre-course work for code bootcamps.
+
+consider this a dumping ground for anything that I am working on and remember to keep and upload. (that isnt proprietary
+or private)
+
+for reference, i use visual studio code, pycharm, and webstorm so far. I really like jetbrains IDEs so I try to use them
+as much as possible. It keeps things consistent for me without having to learn a bunch of new tools. Though I am not
+opposed to learning new tools, visual studio code has a lot of cool features I had never considered before.
